--- a/src/app/shared/components/img/img.component.html
+++ b/src/app/shared/components/img/img.component.html
@@ -1,2 +1,13 @@
-<img *ngIf="disableDefaultImage" [src]="src" [loading]="loading"  />
-<img *ngIf="!disableDefaultImage" showDefaultOnError [defaultImageOnError]="defaultImage" [src]="src" [loading]="loading"  />
+<img
+    *ngIf="disableDefaultImage"
+    [src]="src"
+    [loading]="loading"
+/>
+
+<img
+    *ngIf="!disableDefaultImage"
+    showDefaultOnError
+    [defaultImageOnError]="defaultImage"
+    [src]="src"
+    [loading]="loading"
+/>
