--- a/src/app/shared/components/input/input.component.html
+++ b/src/app/shared/components/input/input.component.html
@@ -1,4 +1,4 @@
-<div class="form-field-input"
+<!-- <div class="form-field-input"
 [ngClass]="{'has-errors': errors.length && (control.dirty || control.touched),'has-prefix': }">
 
-</div>
+</div> -->
