optimizations on test icon page

--- a/src/app/core/tests/button-test/button-test.component.html
+++ b/src/app/core/tests/button-test/button-test.component.html
@@ -1,2 +1,9 @@
-<fundae-button (onClick)="buttonClicked()" >Click me!</fundae-button>
-<p *ngIf="clicks > 0">Button was clicked {{clicks}} times</p>
+<test-nav-bar title="Buttons"></test-nav-bar>
+
+<div class="container-fluid test-layout">
+    <div class="row">
+        <div class="col-3 border-end pt-4 overflow-auto full-height">
+
+        </div>
+    </div>
+</div>
