--- a/src/app/core/tests/components/nav-bar-test/nav-bar-test.component.scss
+++ b/src/app/core/tests/components/nav-bar-test/nav-bar-test.component.scss
@@ -1,3 +1,8 @@
-fundae-icon {
+.navbar-bg {
+    background: linear-gradient( 135deg, #662D8C 10%, #ED1E79 100%);
+    color: #FFFFFF;
+}
+
+.link {
     cursor: pointer;
 }
