--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,24 @@
-<button (click)="clicked()" [class]="classes">
-  <ng-content></ng-content>
+<button
+    class="btn {{ buttonType }}"
+    [ngClass]="classesToApply"
+    [disabled]="isDisabled || loading"
+    [type]="type"
+    (click)="buttonClicked()"
+>
+    <fundae-icon
+        *ngIf="loading"
+        [icon]="loadingIcon"
+    ></fundae-icon>
+
+    <div
+        *ngIf="icon"
+        class="icon"
+        [ngClass]="[buttonType, rounded || !name ? '' : 'margin-icon']"
+    >
+        <fundae-icon [icon]="icon"></fundae-icon>
+    </div>
+
+    <span *ngIf="name">{{ loading ? (loadingText || name) : name }}</span>
+
+    <ng-content *ngIf="!name"></ng-content>
 </button>
