--- a/src/app/core/tests/components/component-specifications/component-specifications.component.html
+++ b/src/app/core/tests/components/component-specifications/component-specifications.component.html
@@ -8,13 +8,13 @@
     <li class="list-group-item scrollbar" *ngIf="componentInformation.inputs">
         <p><strong>Inputs:</strong></p>
 
-        <pre>{{ componentInformation.inputs | json }}</pre>
+        <pre class="scrollbar">{{ componentInformation.inputs | json }}</pre>
     </li>
 
     <li class="list-group-item scrollbar" *ngIf="componentInformation.outputs">
         <p><strong>Outputs:</strong></p>
 
-        <pre>{{ componentInformation.outputs | json }}</pre>
+        <pre class="scrollbar">{{ componentInformation.outputs | json }}</pre>
     </li>
 </ul>
 
