completed img test page

--- a/src/app/core/tests/button-test/button-test.component.html
+++ b/src/app/core/tests/button-test/button-test.component.html
@@ -1,4 +1,4 @@
-<test-nav-bar title="Buttons"></test-nav-bar>
+<test-nav-bar title="Button"></test-nav-bar>
 
 <div class="container-fluid test-layout">
     <div class="row">
