--- a/src/app/core/tests/icon-test/icon-test.component.html
+++ b/src/app/core/tests/icon-test/icon-test.component.html
@@ -1,4 +1,4 @@
-<test-nav-bar title="Icons"></test-nav-bar>
+<test-nav-bar title="Icon"></test-nav-bar>
 
 <div class="container-fluid">
     <div class="row">
@@ -9,7 +9,7 @@
             ></tests-component-specifications>
         </div>
 
-        <div class="col-6 overflow-x-hidden pb-3 full-height">
+        <div class="col-6 scrollbar overflow-x-hidden pb-3 full-height">
             <div class="row">
                 <div class="col-4 my-1" *ngFor="let icon of fontAwesomeIcons">
                     <div class="card">
